[package]
name = "aperf"
version = "0.1.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }

[lib]
name = "aperf_lib"
path = "src/lib.rs"

[[bin]]
name = "aperf"
path = "src/bin/aperf.rs"

[dependencies]
nix = { version = "0.29.0", features = ["signal", "poll"] }
clap = { version = "4.5.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rustix = { version = "0.38.28", features = ["system"] }
serde_yaml = "0.9"
thiserror = "1.0"
log = "0.4.21"
env_logger = "0.10.0"
lazy_static = "1.4.0"
timerfd = "1.6.0"
procfs = "0.12.0"
ctor = "0.2.6"
sysinfo = "0.26.2"
anyhow = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"
aws-config = "0.55.3"
tokio = { version = "1.26.0", features = ["full"] }
strum = "0.24"
strum_macros = "0.24"
sysctl = "*"
perf-event2 = "0.7.2"
libc = "0.2"
flate2 = "1.0.30"
tar = "0.4.40"
infer = "0.13.0"
bincode = "1.3.3"
inferno = "0.11.19"
indexmap = "2.1.0"
cfg-if = "1.0"
tempfile = "3"
serial_test = "3.1.1"
