[package]
name = "aperf"
version = "1.1.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true          # Enable link-time optimization. Does not adversely affect speed.
codegen-units = 1   # Reduce number of codegen units to increase optimizations. Does not adeversely affect speed.
strip = "debuginfo" # Strip debuginfo only. Stack traces still work. Won't work with debuggers.

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }
cc = "1.0"

[lib]
name = "aperf"
path = "src/lib.rs"

[[bin]]
name = "aperf"
path = "src/bin/aperf.rs"

[dependencies]
nix = { version = "0.29.0", features = ["signal", "poll"] }
clap = { version = "4.2.5", features = ["derive"] }
clap_complete = "4.2.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rustix = { version = "0.38.28", features = ["system"] }
serde_yaml = "0.9"
thiserror = "1.0"
log = "0.4.21"
lazy_static = "1.4.0"
timerfd = "1.6.0"
procfs = "0.12.0"
ctor = "0.6.1"
sysinfo = "0.26.2"
anyhow = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"
aws-config = "1.0.0"
tokio = { version = "1.26.0", features = ["full"] }
strum = "0.24"
strum_macros = "0.24"
sysctl = "*"
perf-event2 = "0.7.2"
libc = "0.2"
flate2 = "1.0.30"
tar = "0.4.40"
infer = "0.13.0"
inquire = "0.7.5"
bincode = "1.3.3"
inferno = "0.11.19"
indexmap = "2.1.0"
include_directory = "0.1.1"
cfg-if = "1.0"
tempfile = "3"
serial_test = "3.1.1"
log4rs = "1.3.0"
tdigest = "0.2"
csv = "1.2"
csv-to-html = "0.5.10"

[features]
default = []
hotline = []
