[package]
name = "aperf"
version = "1.3.0"
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true          # Enable link-time optimization. Does not adversely affect speed.
codegen-units = 1   # Reduce number of codegen units to increase optimizations. Does not adeversely affect speed.
strip = "debuginfo" # Strip debuginfo only. Stack traces still work. Won't work with debuggers.

[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }
cc = "1.0"

[lib]
name = "aperf"
path = "src/lib.rs"

[[bin]]
name = "aperf"
path = "src/bin/aperf.rs"

[dependencies]
nix = { version = "0.29.0", features = ["signal", "poll", "user"] }
clap = { version = "4.2.5", features = ["derive"] }
clap_complete = "4.2.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rustix = { version = "0.38.28", features = ["system"] }
thiserror = "1.0"
log = "0.4.21"
lazy_static = "1.4.0"
ctor = "0.2.6"
anyhow = "1.0"
serde_json = "1.0"
itoa = "1"
ryu = "1"
aws-config = "1.0.0"
tokio = { version = "1.26.0", features = ["full"] }
strum = "0.24"
strum_macros = "0.24"
libc = "0.2"
flate2 = "1.0.30"
tar = "0.4.40"
infer = "0.13.0"
bincode = "1.3.3"
inferno = "0.11.19"
indexmap = { version = "2.1.0", features = ["serde"] }
include_dir = "0.7.4"
tempfile = "3"
log4rs = "1.3.0"
csv-to-html = "0.5.10"
numeric-sort = "0.1"
regex = "1"
rmcp = { version = "1.5", features = ["server", "transport-io"], optional = true }
schemars = { version = "0.8", optional = true }
exmex = "0.21"

[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = "0.26.2"
sysctl = "*"
perf-event2 = "0.7.2"
perf-event-open-sys2 = "5.0.6"
procfs = "0.12.0"
timerfd = "1.6.0"
rlimit = "0.11"
linux-perf-data = "0.12"
linux-perf-event-reader = "0.10"
object = { version = "0.36", features = ["read"] }
cpp_demangle = "0.5"
rustc-demangle = "0.1"
gimli = { version = "0.33", default-features = false, features = ["read-core", "endian-reader"] }
lzma-rs = "0.3"

[features]
default = ["mcp-server"]
hotline = []
mcp-server = ["dep:rmcp", "dep:schemars"]
